# Autogen

./: .gitignore  Introduction.ipynb  main.py  pyproject.toml
1-Basics/: AgentChatAPI.ipynb
2-AutogenTeams/: autogent_teams.ipynb  termination_condition.ipynb
3-StateAndHumanInTheLoop/: human_in_loop_after_run.py  manage_state.ipynb  state_and_Human_in_loop.excalidraw
4-AdvanceConcepts/: advance concepts.excalidraw  agent_with_langchain_open_router.ipynb  agent_with_langchain_tool.ipynb  custom_tools_function.py
5-Project/: DSA_agent.py  code_executor_agent.py
5-Tools/: agent_with_langchain_tool.ipynb
AutogenTeams/: autogent_teams.ipynb  termination_condition.ipynb
Basics/: AgentChatAPI.ipynb
StateAndHumanInTheLoop/: human_in_loop.py  manage_state.ipynb  team_state.json
