[project]
name = "autogen-basics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=3.4.3",
    "autogen-agentchat>=0.5.7",
    "autogen-core>=0.5.7",
    "autogen-ext[ollama,openai]>=0.5.7",
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "pydantic>=2.11.5",
]
